# AURORA-HUB

./: .env.example  .gitignore  DEPLOY.md  GATE_INGEST.md  MOBILE.md  PLAN.md  README.md  RELEASE.md  dev.sh  render.yaml  sample_model_test.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: authoring.py  courses.py  health.py  model_tests.py  quiz.py  track.py
backend/app/core/: config.py  db.py  slug.py
backend/app/generate/: crosscheck.py  dedup.py  generator.py  pipeline.py
backend/app/ingest/: gfg_normalize.py  ingest.py  parser.py  scrape_gfg.py  sources.py
backend/app/llm/: base.py  claude.py  factory.py  fallback.py  gemini.py  groq.py  mock.py
backend/app/models/: course.py  enums.py  model_test.py  question.py  quiz_session.py  visit.py
backend/app/schemas/: course.py  model_test.py  quiz.py  visit.py
backend/app/scripts/: author_questions.py  generate.py  ingest_exemplars.py  load_all.py  seed.py  seed_data.py  seed_model_tests.py
backend/app/services/: geo.py  model_test.py  quiz.py
backend/app/verify/: check.py  sandbox.py
backend/aurora_hub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: authored_ai.json  authored_ds.json  authored_questions.json
backend/scripts/: demo_generate_one.py
backend/tests/: conftest.py  factories.py  test_authoring_api.py  test_courses.py  test_fill.py  test_generate_units.py  test_health.py  test_ingest.py  test_model_tests.py  test_models.py  test_parser.py  test_pipeline.py  test_quiz.py  test_sandbox.py  test_seed.py  test_track.py
frontend/: next.config.ts  (+5 more)
(+155 files in other folders)
