[project]
name = "aurora-hub-backend"
version = "0.1.0"
description = "Aurora Hub backend — FastAPI + Beanie + MongoDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "beanie>=1.27",
    "motor>=3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = [
    "google-genai>=0.3",
    "groq>=0.11",
]
anthropic = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
